// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Component Snapshots should match snapshot when closed 1`] = `
<body>
  <div />
</body>
`;

exports[`Modal Component Snapshots should match snapshot when loading 1`] = `
<body>
  <div />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-background/70 px-4"
  >
    <div
      class="modal-card"
    >
      <h3
        class="text-lg font-semibold text-foreground"
      >
        Test Modal
      </h3>
      <div
        class="mt-6 flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-card text-card-foreground hover:bg-card/90 px-4 py-2 text-sm"
          disabled=""
          type="button"
        >
          Abbrechen
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-danger text-danger-foreground hover:bg-danger/90 px-4 py-2 text-sm"
          disabled=""
          type="button"
        >
          Löschen...
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component Snapshots should match snapshot when open 1`] = `
<body>
  <div />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-background/70 px-4"
  >
    <div
      class="modal-card"
    >
      <h3
        class="text-lg font-semibold text-foreground"
      >
        Test Modal
      </h3>
      <div
        class="mt-6 flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-card text-card-foreground hover:bg-card/90 px-4 py-2 text-sm"
          type="button"
        >
          Abbrechen
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-danger text-danger-foreground hover:bg-danger/90 px-4 py-2 text-sm"
          type="button"
        >
          Bestätigen
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component Snapshots should match snapshot with all props 1`] = `
<body>
  <div />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-background/70 px-4"
  >
    <div
      class="modal-card"
    >
      <h3
        class="text-lg font-semibold text-foreground"
      >
        Test Modal
      </h3>
      <p
        class="mt-2 text-sm text-muted-foreground"
      >
        Complete description
      </p>
      <div
        class="mt-4"
      >
        <p>
          Additional content
        </p>
      </div>
      <div
        class="mt-6 flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-card text-card-foreground hover:bg-card/90 px-4 py-2 text-sm"
          disabled=""
          type="button"
        >
          Abbrechen
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-danger text-danger-foreground hover:bg-danger/90 px-4 py-2 text-sm"
          disabled=""
          type="button"
        >
          Löschen...
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component Snapshots should match snapshot with children 1`] = `
<body>
  <div />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-background/70 px-4"
  >
    <div
      class="modal-card"
    >
      <h3
        class="text-lg font-semibold text-foreground"
      >
        Test Modal
      </h3>
      <div
        class="mt-4"
      >
        <p>
          Custom content
        </p>
      </div>
      <div
        class="mt-6 flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-card text-card-foreground hover:bg-card/90 px-4 py-2 text-sm"
          type="button"
        >
          Abbrechen
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-danger text-danger-foreground hover:bg-danger/90 px-4 py-2 text-sm"
          type="button"
        >
          Bestätigen
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component Snapshots should match snapshot with custom button text 1`] = `
<body>
  <div />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-background/70 px-4"
  >
    <div
      class="modal-card"
    >
      <h3
        class="text-lg font-semibold text-foreground"
      >
        Test Modal
      </h3>
      <div
        class="mt-6 flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-card text-card-foreground hover:bg-card/90 px-4 py-2 text-sm"
          type="button"
        >
          Nein, abbrechen
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-danger text-danger-foreground hover:bg-danger/90 px-4 py-2 text-sm"
          type="button"
        >
          Ja, löschen
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Modal Component Snapshots should match snapshot with description 1`] = `
<body>
  <div />
  <div
    class="fixed inset-0 z-50 flex items-center justify-center bg-background/70 px-4"
  >
    <div
      class="modal-card"
    >
      <h3
        class="text-lg font-semibold text-foreground"
      >
        Test Modal
      </h3>
      <p
        class="mt-2 text-sm text-muted-foreground"
      >
        This is a test description
      </p>
      <div
        class="mt-6 flex justify-end gap-3"
      >
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-card text-card-foreground hover:bg-card/90 px-4 py-2 text-sm"
          type="button"
        >
          Abbrechen
        </button>
        <button
          class="inline-flex items-center justify-center gap-2 rounded-[var(--radius-button)] font-semibold transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-none focus:ring-2 focus:ring-primary/50 active:scale-95 bg-danger text-danger-foreground hover:bg-danger/90 px-4 py-2 text-sm"
          type="button"
        >
          Bestätigen
        </button>
      </div>
    </div>
  </div>
</body>
`;
